--- a/src/style.css
+++ b/src/style.css
@@ -7,12 +7,23 @@
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   color: rgb(46, 46, 46);
   font-family: 'Poppins', Arial, Helvetica, sans-serif;
   background: #f3f3f3;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+}
+
+.flex-space-between {
+  display: flex;
+  justify-content: space-between;
+}
+
+.align-center {
+  align-items: center;
 }
 
 .container {
@@ -28,16 +39,11 @@ body {
 }
 
 .title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding: 12px 24px;
   border-bottom: 0.2px solid #e8e8e9;
 }
 
 form {
-  display: flex;
-  justify-content: space-between;
   padding: 24px;
   border-bottom: 0.2px solid #e8e8e9;
 }
@@ -71,17 +77,12 @@ form input::placeholder {
 
 .list-item {
   padding: 4px 24px;
-  display: flex;
-  justify-content: space-between;
   border-bottom: 0.2px solid #e8e8e9;
 }
 
 .form-group {
   flex: 2;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .form-group input {
@@ -108,9 +109,6 @@ form input::placeholder {
 
 .footer a {
   text-decoration: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   color: inherit;
 }
 
